log
Fri 23 Sep 2022 06:38:58 PM UTC: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
d730473
Fri 23 Sep 2022 06:46:33 PM UTC: 
 treemap.c | 23 ++++++++++++++++++++++-
 1 file changed, 22 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c:52:8: error: ‘insertTreeMap’ defined but not used [-Werror=unused-function]
   52 |   void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |        ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
2230df5
Fri 23 Sep 2022 06:47:04 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:
treemap.c:68:1: error: expected identifier or ‘(’ before ‘}’ token
   68 | }
      | ^
Compilation failed
60b2655
Fri 23 Sep 2022 06:47:16 PM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|0
3d1c3d9
Fri 23 Sep 2022 06:52:30 PM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|0
3b607b9
Fri 23 Sep 2022 06:52:45 PM UTC: 
 treemap.c | 4 ----
 1 file changed, 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘minimum’:
treemap.c:70:1: error: control reaches end of non-void function [-Werror=return-type]
   70 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
446cec5
Fri 23 Sep 2022 06:54:34 PM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:
treemap.c:73:1: error: expected identifier or ‘(’ before ‘}’ token
   73 | }
      | ^
Compilation failed
11faed7
Fri 23 Sep 2022 06:54:43 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
b41c588
Fri 23 Sep 2022 06:55:39 PM UTC: 
 treemap.c | 12 ------------
 1 file changed, 12 deletions(-)
 tests:  4|7
total_score: 5/70
69439bb
Fri 23 Sep 2022 06:58:20 PM UTC: 
 treemap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
test.c: In function ‘searchTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
test.c:606: error: control reaches end of non-void function [-Werror=return-type]
  606 | }
      | 
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
2605c3d
Fri 23 Sep 2022 07:04:17 PM UTC: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  11|6
total_score: 15/70
391ddb9
Fri 23 Sep 2022 07:10:40 PM UTC: 
 treemap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  13|5
total_score: 25/70
bf5633f
Fri 23 Sep 2022 07:18:38 PM UTC: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
561b33c
Fri 23 Sep 2022 07:40:14 PM UTC: 
 treemap.c | 33 +++++++++++++++++++++++++++++++++
 1 file changed, 33 insertions(+)
 tests:  18|3
total_score: 40/70
96af9fa
Mon 26 Sep 2022 12:57:43 AM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  20|2
total_score: 45/70
9d2fd5a
